--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -56,3 +56,5 @@ jobs:
       with:
         retain_days: 1
         keep_minimum_runs: 1
+      env:
+        GITHUB_TOKEN: ${{ secrets.ACTION_TRIGGERS_PAT }}
