--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -51,10 +51,9 @@ jobs:
         token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
         event-type: Source Code Update
 
-    - name: Delete workflow runs
-      uses: GitRML/delete-workflow-runs@main
+    - name: Delete Old Workflows
+      uses: Mattraks/delete-workflow-runs@main
       with:
+        token: ${{ secrets.GITHUB_TOKEN }}
         retain_days: 1
-        keep_minimum_runs: 1
-      env:
-        GITHUB_TOKEN: ${{ secrets.ACTION_TRIGGERS_PAT }}
+        keep_minimum_runs: 0
