--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -51,9 +51,8 @@ jobs:
         token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
         event-type: Source Code Update
 
-    - name: Delete Old Workflows
-      uses: Mattraks/delete-workflow-runs@main
+    - name: Delete workflow runs
+      uses: GitRML/delete-workflow-runs@main
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
         retain_days: 1
-        keep_minimum_runs: 0
+        keep_minimum_runs: 1
