--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -52,9 +52,7 @@ jobs:
         event-type: Source Code Update
 
     - name: Delete workflow runs
-      uses: MajorScruffy/delete-old-workflow-runs@v0.2.0
+      uses: GitRML/delete-workflow-runs@main
       with:
-         repository: forseticn/lede_x86_64                   # replace this with your own repository
-         older-than-seconds: 86400                           # remove all workflow runs older than 1 day
-      env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        retain_days: 1
+        keep_minimum_runs: 1
