--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -129,8 +129,8 @@ jobs:
         cd openwrt/bin/targets/*/*
         rm -rf packages *.buildinfo *.manifest *kernel.bin *rootfs.img.gz profiles.json sha256sums
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
-        # echo "::set-output name=status::success"
-        echo "status=success" >> $GITHUB_ENV
+        echo "::set-output name=status::success"
+        # echo "status=success" >> $GITHUB_ENV
 
 
     - name: Upload firmware directory
@@ -166,8 +166,8 @@ jobs:
         touch release.txt
         [ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer](${{ steps.cowtransfer.outputs.url }})" >> release.txt
         [ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
-        # echo "::set-output name=status::success"
-        echo "status=success" >> $GITHUB_ENV
+        echo "::set-output name=status::success"
+        # echo "status=success" >> $GITHUB_ENV
 
 
     - name: Upload firmware to release
