--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -152,11 +152,11 @@ jobs:
     #    keep_minimum_runs: 3
 
     - name: Delete Old Workflows
-      uses: Mattraks/delete-workflow-runs@main
+      uses: Mattraks/delete-workflow-runs@v2
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         retain_days: 1
-        keep_minimum_runs: 3
+        keep_minimum_runs: 0
     
     - name: Remove old Releases
       uses: dev-drprasad/delete-older-releases@v0.3.2
