--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -131,7 +131,7 @@ jobs:
         echo "内核版本: ${{ env.KERNEL }}" >> release.txt
 
     - name: Upload firmware to release 上传固件到发布页
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@master
       if: steps.tag.outputs.status == 'success' && !cancelled()
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
